--- a/loan.html
+++ b/loan.html
@@ -11,7 +11,7 @@
             width: 80%;
             margin-left: 10%;
             text-align: center;
-            background-color: #f1faee;
+            background-color: #faaed1;
         }
     </style>
     <script>
@@ -96,7 +96,7 @@
 
 <body>
     <header>
-        <h1>Week 10:Loan calculator </h1>
+        <h1>Week 11:Loan calculator </h1>
         <h2>Thanush </h2>
     </header>
     <Main>
