--- a/invest.html
+++ b/invest.html
@@ -24,11 +24,11 @@ text-align: center;
 
 <body>
     <header>
-        <h1>Week 4:Template </h1>
+        <h1>Week 11:Investment calculator</h1>
         <h2>Thanush </h2>
     </header>
     <Main>
-        <h3>My First Template Program</h3>
+        <h3>Investment Calculator</h3>
         Amount nvested (principal):<input placeholder="Amount invested (principal)" type="text" id="principal" size="25" value="" /> <br />
         Annual rate (exaple:0.8):<input placeholder="Annual rate (exaple:0.8)" type="text" id="annualRate" size="25" value="" /> <br />
         Numner Of years:<input placeholder="Numner Of years" type="text" id="years" size="25" value="" /> <br />
