--- a/quiz.html
+++ b/quiz.html
@@ -20,7 +20,25 @@
       &copy;2020 &bull; Thanush Ganesh &bull; BYU-Idaho &bull; CIT 160
     </footer>
     <script>
+// Fills the specified array with the value x.
+// Reverses the contents of the specified array.
+let data = [ 4, -1, 0, 5, 9, 1, 2, 4 ];
+data[data.length - 1] - data[0]
+/*
+let list = [28.1,20,23.6,0,15];
+function linearSearch(list, key) {
+    for (var i = 0;  i < list.length;  ++i) {
+        if (list[i] == key) {
+            return i;
+        }
+    }
+    return -1;
+}
 
+linearSearch (list,23.6);
+*/
+
+/*
 testGCD();
 
 function testGCD() {
@@ -53,6 +71,10 @@ function gcd(a,b) {
 
     return a;
 }
+
+*/
+
+
 
 
 /*
