--- a/loan.html
+++ b/loan.html
@@ -91,7 +91,7 @@
 <body>
     <header>
         <h1>Week 11:Loan calculator </h1>
-        <h2>Thanush </h2>
+        <h2>Thanush G </h2>
     </header>
     <Main>
         <h3>Loan calculator</h3>
